welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: illegal start of simple pattern
  case match {
       ^BDR2:21: error: '=>' expected but '}' found.
} 
^